<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/spacing_xl">

        <TextView
            android:id="@+id/tv_title"
            style="@style/Senta.TextView.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xxxl"
            android:text="@string/register_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:text="注册以开始使用"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_size_body"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <LinearLayout
            android:id="@+id/ll_phone_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xxl"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle">

            <EditText
                android:id="@+id/et_phone"
                style="@style/Senta.EditText"
                android:layout_width="0dp"
                android:layout_height="@dimen/input_height"
                android:layout_weight="1"
                android:hint="@string/hint_phone_or_email"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tv_send_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_sm"
                android:paddingHorizontal="@dimen/spacing_sm"
                android:paddingVertical="@dimen/spacing_xs"
                android:text="@string/btn_send_code"
                android:textColor="@color/primary"
                android:textSize="@dimen/text_size_body" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_verify_code"
            style="@style/Senta.EditText"
            android:layout_width="0dp"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/spacing_md"
            android:hint="@string/hint_verify_code"
            android:inputType="number"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_phone_input" />

        <EditText
            android:id="@+id/et_password"
            style="@style/Senta.EditText"
            android:layout_width="0dp"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/spacing_md"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_verify_code" />

        <EditText
            android:id="@+id/et_confirm_password"
            style="@style/Senta.EditText"
            android:layout_width="0dp"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/spacing_md"
            android:hint="请确认登录密码"
            android:inputType="textPassword"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            style="@style/Senta.Button.Primary"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="@dimen/spacing_xl"
            android:text="@string/btn_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_confirm_password" />

        <TextView
            android:id="@+id/tv_login_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xl"
            android:layout_marginBottom="@dimen/spacing_xxl"
            android:text="已有账号？立即登录"
            android:textColor="@color/primary"
            android:textSize="@dimen/text_size_body"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_register" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
